Add middle-click on news

--- a/lang/en/index.html
+++ b/lang/en/index.html
@@ -584,10 +584,7 @@ permalink: /en
                 <p>{{ post.desc }}</p>
                 <p class="news-date">{{ post.date | date: date_format }}</p>
                 {%- if content != "" -%}
-                <p class="show-more"><a class="link popup-modal" href="#{{ post.ref }}">Show more <i class="fas fa-caret-right"></i></a></p>
-                <div id="{{ post.ref }}" class="mfp-hide white-popup-block">
-                  {{ content }}
-                </div>
+                <p class="show-more"><a href="{{ post.url }}" class="link popup-modal">Show more <i class="fas fa-caret-right"></i></a></p>
                 {%- endif -%}
               </div>
               {%- endif -%}
@@ -601,10 +598,7 @@ permalink: /en
                 <p>{{ post.desc }}</p>
                 <p class="news-date">{{ post.date | date: date_format }}</p>
                 {%- if content != "" -%}
-                <p class="show-more"><a class="link popup-modal" href="#{{ post.ref }}">Show more <i class="fas fa-caret-right"></i></a></p>
-                <div id="{{ post.ref }}" class="mfp-hide white-popup-block">
-                  {{ content }}
-                </div>
+                <p class="show-more"><a href="{{ post.url }}" class="link popup-modal">Show more <i class="fas fa-caret-right"></i></a></p>
                 {%- endif -%}
               </div>
               {%- endif -%}
