Fix release popup

--- a/lang/fr/index.html
+++ b/lang/fr/index.html
@@ -599,7 +599,7 @@ permalink: /fr
               <p>{{ post.desc }}</p>
               <p class="news-date">{{ post.date | date: date_format }}</p>
               {%- if content != "" -%}
-              <p class="show-more"><a href="{{ post.url }}" class="link popup-modal">En savoir plus <i class="fas fa-caret-right"></i></a></p>
+              <p class="show-more"><a href="{{ post.url }}" class="link ajax-popup-modal">En savoir plus <i class="fas fa-caret-right"></i></a></p>
               {%- endif -%}
             </div>
             {%- endif -%}
@@ -613,7 +613,7 @@ permalink: /fr
               <p>{{ post.desc }}</p>
               <p class="news-date">{{ post.date | date: date_format }}</p>
               {%- if content != "" -%}
-              <p class="show-more"><a href="{{ post.url }}" class="link popup-modal">En savoir plus <i class="fas fa-caret-right"></i></a></p>
+              <p class="show-more"><a href="{{ post.url }}" class="link ajax-popup-modal">En savoir plus <i class="fas fa-caret-right"></i></a></p>
               {%- endif -%}
             </div>
             {%- endif -%}
