--- a/lang/en/index.html
+++ b/lang/en/index.html
@@ -584,7 +584,7 @@ permalink: /en
                 <p>{{ post.desc }}</p>
                 <p class="news-date">{{ post.date | date: date_format }}</p>
                 {%- if content != "" -%}
-                <p class="show-more"><a href="{{ post.url }}" class="link popup-modal">Show more <i class="fas fa-caret-right"></i></a></p>
+                <p class="show-more"><a href="{{ post.url }}" class="link ajax-popup-modal">Show more <i class="fas fa-caret-right"></i></a></p>
                 {%- endif -%}
               </div>
               {%- endif -%}
@@ -598,7 +598,7 @@ permalink: /en
                 <p>{{ post.desc }}</p>
                 <p class="news-date">{{ post.date | date: date_format }}</p>
                 {%- if content != "" -%}
-                <p class="show-more"><a href="{{ post.url }}" class="link popup-modal">Show more <i class="fas fa-caret-right"></i></a></p>
+                <p class="show-more"><a href="{{ post.url }}" class="link ajax-popup-modal">Show more <i class="fas fa-caret-right"></i></a></p>
                 {%- endif -%}
               </div>
               {%- endif -%}
@@ -713,7 +713,7 @@ permalink: /en
                         NagVis worldmap!)</li>
                     </ul>
                     <h3>NAGIOSBP</h3>
-                    <p>Any Bug fix or enhancement from 2013, product <em>Deprecated</em> in realease 5.3-0</p>
+                    <p>Any Bug fix or enhancement from 2013, product <em>Deprecated</em> in release 5.3-0</p>
                     <h3>NOTIFIER (1.1.2-3)</h3>
                     <ul>
                       <li>FIX: en_EN does NOT exist in locales</li>
