:sparkles: Add roadmap

--- a/lang/en/index.html
+++ b/lang/en/index.html
@@ -881,4 +881,35 @@ Thruk 2.08-1</code></pre>
           </div>
         </div>
   </section>
+
+  <!--==========================
+          Roadmap section
+        ============================-->
+  <section id="roadmap" class="section-with-bg">
+    {% assign roadmaps=site.data.roadmap.en %}
+    <div class="section-header"><br>
+      <h2>Roadmap</h2>
+    </div>
+    <div class="degrad"></div>
+    <table id="roadmap-text">
+      {% for roadmap in roadmaps %}
+      {% assign index=forloop.index %}
+      <tr>
+        <th >{{ roadmap[0] }}</th>
+
+        {% for roadmapU in roadmap[1] %}
+          <td>{{ roadmapU.title }}	&nbsp;<a id="link-roadmap" class="link popup-modal" href="#roadmap-{{ index }}{{ forloop.index }}"><svg width="1em" height=".9em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
+            <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
+          </svg></a></td>
+          <div id="roadmap-{{ index }}{{ forloop.index }}" class="mfp-hide white-popup-block">
+            <h1>{{ roadmapU.title }}</h1>
+            {{ roadmapU.description }}
+          </div>
+          {% endfor %}
+      </tr>
+      {% endfor %}
+    </table>
+    <img id="logo-roadmap" src="/img/logos/logo-eyes_NB.svg" alt="">
+  </section>
 </main>
