--- a/lang/en/index.html
+++ b/lang/en/index.html
@@ -892,7 +892,7 @@ Thruk 2.08-1</code></pre>
     </div>
     <div class="degrad"></div>
     <table id="roadmap-text">
-      {% for roadmap in roadmaps %}
+      {% for roadmap in roadmaps reversed %}
       {% assign index=forloop.index %}
       <tr>
         <th >{{ roadmap[0] }}</th>
