:bug: Fix roadmap order

--- a/lang/fr/index.html
+++ b/lang/fr/index.html
@@ -907,7 +907,7 @@ Thruk 2.08-1</code></pre>
     </div>
     <div class="degrad"></div>
     <table id="roadmap-text">
-      {% for roadmap in roadmaps reversed %}
+      {% for roadmap in roadmaps %}
       {% assign index=forloop.index %}
       <tr>
         <th >{{ roadmap[0] }}</th>
