Notification banner added

--- a/lang/fr/index.html
+++ b/lang/fr/index.html
@@ -6,6 +6,21 @@ permalink: /fr
 ---
 
 <!--==========================
+    Banner Section
+  ============================-->
+  <!-- The Modal -->
+<div id="banner" class="modal">
+  <!-- Modal content -->
+  <div class="modal-content">
+    <p class="banner-text">
+      <span id="close-banner" class="close-banner" >&times;</span>
+      Une vague d'attaques massives visant les solutions de supervision CERTFR-2021-CTI-004 est en cours, <b>EyesOf<span>Network</span></b> n'est à ce jour pas ciblé.
+      <br><a href="/fr/news/CERTFR-2021-CTI-004">En savoir plus <i class="fas fa-caret-right"></i></a>
+    </p>
+  </div>
+</div>
+
+<!--==========================
     Intro Section
   ============================-->
 <section id="intro">
