Fix error typing #28 in index.html

--- a/lang/fr/index.html
+++ b/lang/fr/index.html
@@ -476,7 +476,7 @@ permalink: /fr
                     <div class="col-lg-3">
                       <h4>Analysez les comportements</h4>
 
-                      <p>Ddétectez des anomalies dans les comportements de vos utilisateurs grâce aux fonctionnalités de
+                      <p>Détectez des anomalies dans les comportements de vos utilisateurs grâce aux fonctionnalités de
                         <strong>Machine Learning</strong> et intervenez manuellement ou automatiquement avant qu'il ne
                         soit trop tard.</p>
                     </div>
