Fix download urls

--- a/lang/fr/index.html
+++ b/lang/fr/index.html
@@ -688,7 +688,7 @@ permalink: /fr
                 <li class="event" data-date="10/12/2019">
                   <h3>Version : 5.3</h3>
                   <p><strong>GPL Version 2 </strong><em> EyesOfNetwork-5.3-x86_64-bin.iso</em></p>
-                  <p><a href="http://download.eyesofnetwork.com/EyesOfNetwork-5.3-x86_64-bin.iso">TÉLÉCHARGER</a>
+                  <p><a href="https://download.eyesofnetwork.com/EyesOfNetwork-5.3-x86_64-bin.iso">TÉLÉCHARGER</a>
                   </p>
                   <descr>1.5GB EON 5.3 64 Bits</descr>
                   <p><span class="badge">md5:4ee27da1ea2de2d351c216352cafae54</span></p>
@@ -804,7 +804,7 @@ permalink: /fr
                   <h3>Version : 5.2</h3>
                   <p><strong>GPL Version 2 </strong><em> EyesOfNetwork-5.2-x86_64-bin.iso</em></p>
                   <p>
-                    <a href="http://download.eyesofnetwork.com/EyesOfNetwork-5.2-x86_64-bin.iso">TÉLÉCHARGER</a>
+                    <a href="https://download.eyesofnetwork.com/EyesOfNetwork-5.2-x86_64-bin.iso">TÉLÉCHARGER</a>
                   </p>
                   <descr>1.2GB EON 5.2 64 Bits</descr>
                   <p><span class="badge">md5:2ce6c52104b8bb2337e1ffde535819e6</span></p>
@@ -830,7 +830,7 @@ permalink: /fr
                   <h3>Version : 5.1</h3>
                   <p><strong>GPL Version 2 </strong><em> EyesOfNetwork-5.1-x86_64-bin.iso</em></p>
                   <p>
-                    <a href="http://download.eyesofnetwork.com/EyesOfNetwork-5.1-x86_64-bin.iso">TÉLÉCHARGER</a>
+                    <a href="https://download.eyesofnetwork.com/EyesOfNetwork-5.1-x86_64-bin.iso">TÉLÉCHARGER</a>
                   </p>
                   <descr>970MB EON 5.1 64 Bits</descr>
                   <p><span class="badge">md5:7cb3aa43ded75eabe94ad03079b779c7</span></p>
@@ -860,7 +860,7 @@ permalink: /fr
                   <h3>Version : 5.0</h3>
                   <p><strong>GPL Version 2 </strong><em> EyesOfNetwork-5.0-x86_64-bin.iso</em></p>
                   <p>
-                    <a href="http://download.eyesofnetwork.com/EyesOfNetwork-5.0-x86_64-bin.iso">TÉLÉCHARGER</a>
+                    <a href="https://download.eyesofnetwork.com/EyesOfNetwork-5.0-x86_64-bin.iso">TÉLÉCHARGER</a>
                   </p>
                   <descr>868MB EON 5.0 64 Bits</descr>
                   <p><span class="badge">md5:7c1d5ee37b067039e279b73324f7458f</span></p>
