--- a/lang/fr/index.html
+++ b/lang/fr/index.html
@@ -4,7 +4,19 @@ ref: index
 lang: fr
 permalink: /fr
 ---
-
+<!--==========================
+    Banner Section
+  ============================-->
+  <!-- The Modal -->
+  <div id="banner" class="modal">
+    <!-- Modal content -->
+    <div class="modal-content">
+      <p class="banner-text">
+        <span id="close-banner" class="close-banner" >&times;</span>
+        Nous sommes au regret d'annoncer que ce projet n'est plus maintenu et que le serveur de dépôt a été arrêté. Le code source reste néanmoins disponible.
+      </p>
+    </div>
+  </div>
 <!--==========================
     Intro Section
   ============================-->
