--- a/lang/en/index.html
+++ b/lang/en/index.html
@@ -4,7 +4,19 @@ ref: index
 lang: en
 permalink: /en
 ---
-
+<!--==========================
+    Banner Section
+  ============================-->
+  <!-- The Modal -->
+  <div id="banner" class="modal">
+    <!-- Modal content -->
+    <div class="modal-content">
+      <p class="banner-text">
+        <span id="close-banner" class="close-banner" >&times;</span>
+        We regret to announce that this project is no longer maintained and that the repository server has been shut down. The source code nevertheless remains available.
+      </p>
+    </div>
+  </div>
 <!--==========================
     Intro Section
   ============================-->
