--- a/lang/fr/index.html
+++ b/lang/fr/index.html
@@ -781,8 +781,7 @@ permalink: /fr
                 <h2>Télécharger</h2>
             </div>
             <div class="sub-header">
-                <h5>Vous pouvez télécharger librement les différents supports de la solution. Aidez-nous à vous
-                    connaître en nous communicant vos coordonnées à l’adresse eyesofnetwork@eyesofnetwork.com.
+                <h5>Vous pouvez télécharger librement les différents supports de la solution.
                     Merci.</h5>
                 <div>
                     <div class="download-container">
@@ -792,8 +791,7 @@ permalink: /fr
                                 <li class="event" data-date="10/02/2023">
                                     <h3>Version : 6.0</h3>
                                     <p><strong>GPL Version 2 </strong><em> EyesOfNetwork-6.0-x86_64-bin.iso</em></p>
-                                    <p><a
-                                            href="http://download.eyesofnetwork.com/EyesOfNetwork-6.0-x86_64-bin.iso">TÉLÉCHARGER</a>
+                                    <p><a href="">INDISPONIBLE</a>
                                     </p>
                                     <descr>1.74GB EON 6.0 64 Bits</descr>
                                     <p><span class="badge">md5:405aab922016989b8d51b18b39fd33ac</span></p>
@@ -1131,8 +1129,7 @@ permalink: /fr
                                     <h3>Version : 5.2</h3>
                                     <p><strong>GPL Version 2 </strong><em> EyesOfNetwork-5.2-x86_64-bin.iso</em></p>
                                     <p>
-                                        <a
-                                            href="http://download.eyesofnetwork.com/EyesOfNetwork-5.2-x86_64-bin.iso">TÉLÉCHARGER</a>
+                                        <a href="">INDISPONIBLE</a>
                                     </p>
                                     <descr>1.2GB EON 5.2 64 Bits</descr>
                                     <p><span class="badge">md5:2ce6c52104b8bb2337e1ffde535819e6</span></p>
@@ -1158,8 +1155,7 @@ permalink: /fr
                                     <h3>Version : 5.1</h3>
                                     <p><strong>GPL Version 2 </strong><em> EyesOfNetwork-5.1-x86_64-bin.iso</em></p>
                                     <p>
-                                        <a
-                                            href="http://download.eyesofnetwork.com/EyesOfNetwork-5.1-x86_64-bin.iso">TÉLÉCHARGER</a>
+                                         <a href="">INDISPONIBLE</a>
                                     </p>
                                     <descr>970MB EON 5.1 64 Bits</descr>
                                     <p><span class="badge">md5:7cb3aa43ded75eabe94ad03079b779c7</span></p>
@@ -1189,8 +1185,7 @@ permalink: /fr
                                     <h3>Version : 5.0</h3>
                                     <p><strong>GPL Version 2 </strong><em> EyesOfNetwork-5.0-x86_64-bin.iso</em></p>
                                     <p>
-                                        <a
-                                            href="http://download.eyesofnetwork.com/EyesOfNetwork-5.0-x86_64-bin.iso">TÉLÉCHARGER</a>
+                                         <a href="">INDISPONIBLE</a>
                                     </p>
                                     <descr>868MB EON 5.0 64 Bits</descr>
                                     <p><span class="badge">md5:7c1d5ee37b067039e279b73324f7458f</span></p>
